force-app/main/default/objects/WhatsApp_Metadata__mdt/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <defaultValue>&quot;293709137162139&quot;</defaultValue>
    <label>Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>