force-app/main/default/objects/WhatsApp_Metadata__mdt/fields/WhatsApp_Secret__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Secret__c</fullName>
    <defaultValue>&quot;c0b406136c2fee3be6c65e40389d88f4&quot;</defaultValue>
    <label>WhatsApp Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>