force-app/main/default/objects/WhatsApp_Metadata__mdt/fields/WhatsApp_Token__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Token__c</fullName>
    <defaultValue>&quot;EAAGCOeU19QoBOx2l1UhOk16uvUGlCdZAypC3pnQsu9BQ5vqAyQ3gXDx4n6FWlLJzvhZAxpEZBSU4nqVxiIBBdkICb1TwUfzi67PeqEjHZAXekRagGhRrcjHgIAJzMKlfDWG03BZC2QWsKcJQerVUcvD6F094w7wLZAysECIbP6VOnX5YW0bXGywocRwj71Jbzw6Aw28HnccJ38BgZCh&quot;</defaultValue>
    <label>WhatsApp Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>