force-app/main/default/objects/WhatsApp_Metadata__mdt/fields/WhatsApp_Verify_Token__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Verify_Token__c</fullName>
    <defaultValue>&quot;ANVIAIRA&quot;</defaultValue>
    <label>WhatsApp Verify Token</label>
    <length>20</length>
    <type>Text</type>
</CustomField>